complete thread doc